--- a/site/i18n/de.po
+++ b/site/i18n/de.po
@@ -14,12 +14,12 @@ msgstr ""
 
 msgid "gluon-config-mode:welcome"
 msgstr ""
-"Willkommen zum Einrichtungsassistenten für deinen neuen Freifunk Remscheid-Knoten. Fülle das folgende "
+"Willkommen zum Einrichtungsassistenten für deinen neuen Freifunk Leverkusen-Knoten. Fülle das folgende "
 "Formular deinen Vorstellungen entsprechend aus und sende es ab."
 
 msgid "gluon-config-mode:pubkey"
 msgstr ""
-"<p>Dies ist der öffentliche Schlüssel deines Freifunk-Knotens. Er wird in der Freifunk Remscheid-"
+"<p>Dies ist der öffentliche Schlüssel deines Freifunk-Knotens. Er wird in der Freifunk Leverkusen-"
 "Community nur in Ausnahmefällen und zur Fehlerbehebung benötigt.</p><div class=\"the-key\"> # <%= "
 "pcdata(hostname) %> <br /><%= pubkey %></div>"
 
@@ -41,7 +41,7 @@ msgstr ""
 "Anschlüsse hat, ist die <b><font color=\"blue\">blaue Buchse</font></b> die richtige.</p><p><h4>Nimm' "
 "Teil!</h4></p><p>Die Freifunker treffen sich auf Stammtischen zum Kennenlernen und Austausch von Wissen. "
 "Wenn du Fragen hast, komm' vorbei!</p><p>Den Termin für den nächsten Stammtisch findest du auf unserer "
-"<a href=\"https://www.freifunk-remscheid.de/\" target=\"_blank\">Webseite</a>.</p><p><h4>Das Teilen ist "
+"<a href=\"https://www.freifunk-leverkusen.de/\" target=\"_blank\">Webseite</a>.</p><p><h4>Das Teilen ist "
 "sicher!</h4></p><p>Über deinen Internetanschluss wird lediglich ein Tunnel zu unseren Servern aufgebaut, "
 "ein sogenannter VPN-Tunnel (Virtuelles Privates Netzwerk). Diese Verbindung dient dazu, ein gemeinsames "
 "Netzwerk für die Freifunk-Knoten deiner Community zu schaffen. Die Internetverbindung für dieses "
